[package]
name = "trade-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.19.0"
ethers = { version = "2.0", features = ["legacy", "openssl", "ws"] }
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.89"
serde = "1.0.149"
